--- a/frontend/web/css/task-form.css
+++ b/frontend/web/css/task-form.css
@@ -3,11 +3,11 @@
 	margin: auto;
 	padding-top: 40px;
 	padding-bottom: 40px;
-	width: 1068px;
+	width: 100%;
 }
 
 .module {
-	margin-top: 40px;
+	position: relative;
 }
 
 table,
@@ -28,14 +28,20 @@ th {
 }
 th {
     background: url(/images/hd.jpg) repeat-x;
-	height: 45px;	
+	height: 45px;
+	font-size: 16px;
+}
+
+td>label {
+	font-size: 14px;	
 }
 
 input[type=text], input[type=password] {
-	text-align: center;
+	text-align: left;
 	background-color: #FFF;
 	vertical-align: middle;
 	height: 32px;
+	width: 100%;
 	display: inline-block;
 	padding: 4px 12px;
 	font-size: 14px;
@@ -60,7 +66,60 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 .task-form > input {
-	
+}
+
+.tip-icon {
+	position: relative;
+    display: inline-flex;
+    background: url(/images/tip-icon.png);
+    width: 20px;
+    height: 20px;
+    vertical-align: -5px;
+}
+
+.tip-icon:hover {
+	cursor: pointer;	
+}
+
+.tip-icon:hover:before {
+	content: attr(data-tip);
+	padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+	color: #31708f;
+    background-color: #d9edf7;
+	position: absolute;
+	left: 30px;
+    top: -20px;
+	width: attr(data-width);
+    min-width: 250px;
+    z-index: 99;
+	text-align: left;
+	font-size: 13px;
+    font-weight: normal;
+}
+
+.tip-icon:hover:after {
+	content: '';
+	width: 0;
+	height: 0;
+    border: 10px solid #d9edf7;
+	border-left: 10px solid transparent;
+	border-top: 10px solid transparent;	
+	border-bottom: 10px solid transparent;	
+	position: absolute;
+	left: 10px;
+    top: -2px;
+    z-index: 99;
+}
+
+.tip {
+	padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+	color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
 }
 
 .file-upload-container {
@@ -107,6 +166,20 @@ input[type=text]:focus, input[type=password]:focus {
 	display: block;
 }
 
+.test-btn {
+	padding: 5px 10px;
+    display: inline-block;
+    background-color: #218bbd;
+    border-radius: 3px;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    z-index: 99;
+    top: 10px;
+}
+
 .progress {
     display: none;
     width: 610px;
@@ -147,10 +220,39 @@ input[type=text]:focus, input[type=password]:focus {
 	float: right;
 }
 
-.btn-disabled {
+.disabled {
 	opacity: 0.3;
-    cursor: default;	
-	point-events: none;
+    cursor: default;
+    pointer-events: none;
+}
+
+.form-title {
+    text-align: left;
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
+}
+
+.form-title>label {
+    font-weight: bold;
+}
+.form-title>input {
+    width: 400px;
+    margin-left: 30px;
+    border-color: #1F99DF;
+    box-shadow: 0px 0px 1px #abdbff;
+    -webkit-box-shadow: 0px 0px 1px #abdbff;
+    background: none;
+    text-align: left;
+}
+
+label.title {
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.required {
+	color: #ff0000;
 }
 
 .form-div {
@@ -173,6 +275,11 @@ fieldset {
     margin: 10px 0;
 }
 
+legend {
+	color: #31708f;
+	font-size: 14px;
+}
+
 .radio-list .radio {
 	float: left;
 	margin-left: 30px;
@@ -182,6 +289,71 @@ fieldset {
 
 .radio-list input[type=radio] {
 	vertical-align: -2px;
+}
+
+.form-bottom {
+    text-align: center;
+    margin-top: 40px;
+}
+
+#new-task {
+    width: 120px;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    color: #fff;
+    background-color: #4183bd;
+}
+
+#new-task:hover {
+    background-color: #0060b5;
+}
+
+.btn {
+	display: inline-block;
+	padding: 5px 12px;
+	margin-bottom: 0;
+	font-weight: 400;
+	line-height: 1.4;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	-webkit-user-select: none;
+	user-select: none;
+	background-image: none;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	min-width: 64px;
+	cursor: pointer;	
+}
+
+.btn-default {
+	color: #333;
+	background-color: #f8f8f8;
+	border-color: #ccc;
+	padding: 4px 12px;
+}
+
+.btn-primary {
+	color: #fff;
+	background-color: #4183bd;
+	padding: 4px 12px;
 }
 
 /**
